--- a/ChessTournaments/ChessTournaments.csproj
+++ b/ChessTournaments/ChessTournaments.csproj
@@ -65,7 +65,7 @@
     <Compile Include="Model\RegisterModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="ViewModel\RegisterViewModel.cs" />
-    <Compile Include="ViewModel\RelayCommand.cs" />
+    <Compile Include="ViewModel\BaseClasses\RelayCommand.cs" />
     <Compile Include="View\OrganizerDashboard.xaml.cs">
       <DependentUpon>OrganizerDashboard.xaml</DependentUpon>
     </Compile>
@@ -134,6 +134,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="DAL\Entities\" />
+    <Folder Include="DAL\Repositories\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
