Add entity Uzytkownik

--- a/ChessTournaments/ChessTournaments.csproj
+++ b/ChessTournaments/ChessTournaments.csproj
@@ -106,6 +106,7 @@
     </ApplicationDefinition>
     <Compile Include="DAL\DBConnection.cs" />
     <Compile Include="DAL\Encje\Uzytkownik.cs" />
+    <Compile Include="DAL\Repozytoria\RepozytoriumUzytkownicy.cs" />
     <Compile Include="Model\LoginModel.cs" />
     <Compile Include="Model\RegisterModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
