--- a/ChessTournaments/ChessTournaments.csproj
+++ b/ChessTournaments/ChessTournaments.csproj
@@ -120,7 +120,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DAL\DBConnection.cs" />
-    <Compile Include="DAL\Encje\Turnieje.cs" />
+    <Compile Include="DAL\Encje\Turniej.cs" />
     <Compile Include="DAL\Encje\Uzytkownik.cs" />
     <Compile Include="DAL\Repozytoria\RepozytoriumUzytkownicy.cs" />
     <Compile Include="Model\AuthenticationModel.cs" />
