add encja partia

--- a/ChessTournaments/ChessTournaments.csproj
+++ b/ChessTournaments/ChessTournaments.csproj
@@ -123,7 +123,7 @@
     <Compile Include="DAL\Encje\Date.cs" />
     <Compile Include="DAL\Encje\Organizator.cs" />
     <Compile Include="DAL\Encje\Partia.cs" />
-    <Compile Include="DAL\Encje\statusZawodnika.cs" />
+    <Compile Include="DAL\Encje\StatusZawodnika.cs" />
     <Compile Include="DAL\Encje\Turniej.cs" />
     <Compile Include="DAL\Encje\Uzytkownik.cs" />
     <Compile Include="DAL\Encje\Zawodnik.cs" />
