--- a/ChessTournaments/ChessTournaments.csproj
+++ b/ChessTournaments/ChessTournaments.csproj
@@ -126,11 +126,13 @@
     <Compile Include="DAL\Encje\Uzytkownik.cs" />
     <Compile Include="DAL\Encje\Zawodnik.cs" />
     <Compile Include="DAL\Repozytoria\RepozytoriumOrganizator.cs" />
+    <Compile Include="DAL\Repozytoria\RepozytoriumTurniej.cs" />
     <Compile Include="DAL\Repozytoria\RepozytoriumUzytkownicy.cs" />
     <Compile Include="DAL\Repozytoria\RepozytoriumZawodnik.cs" />
     <Compile Include="Model\AuthenticationModel.cs" />
     <Compile Include="Model\LoginModel.cs" />
     <Compile Include="Model\RegisterModel.cs" />
+    <Compile Include="Model\TurniejModel.cs" />
     <Compile Include="ViewModel\BaseClasses\AuthenticationViewModel.cs" />
     <Compile Include="ViewModel\BaseClasses\ViewModelBase.cs" />
     <Compile Include="ViewModel\DashboardViewModel.cs" />
