--- a/ChessTournaments/ChessTournaments.csproj
+++ b/ChessTournaments/ChessTournaments.csproj
@@ -122,10 +122,13 @@
     <Compile Include="DAL\DBConnection.cs" />
     <Compile Include="DAL\Encje\Date.cs" />
     <Compile Include="DAL\Encje\Organizator.cs" />
+    <Compile Include="DAL\Encje\Partia.cs" />
+    <Compile Include="DAL\Encje\StatusZawodnika.cs" />
     <Compile Include="DAL\Encje\Turniej.cs" />
     <Compile Include="DAL\Encje\Uzytkownik.cs" />
     <Compile Include="DAL\Encje\Zawodnik.cs" />
     <Compile Include="DAL\Repozytoria\RepozytoriumOrganizator.cs" />
+    <Compile Include="DAL\Repozytoria\RepozytoriumStatus.cs" />
     <Compile Include="DAL\Repozytoria\RepozytoriumTurniej.cs" />
     <Compile Include="DAL\Repozytoria\RepozytoriumUzytkownicy.cs" />
     <Compile Include="DAL\Repozytoria\RepozytoriumZawodnik.cs" />
